ping request added
