# application-server/swagger.yaml
@@ -23,6 +23,9 @@ tags:
   - name: user
     description: |
       Llamados que puede realizar los usuarios 
+  - name: server activity
+    description: |
+          Llamados para conocer la actividad del servidor
 paths:
   /token:
     post:
@@ -58,7 +61,22 @@ paths:
           schema: 
             $ref: "#/definitions/Error"
       summary: "Generar token de usuario de negocio"      
-            
+  
+  /ping:
+    get:
+      tags:
+        - server activity
+      description: "Brinda una respuesta rápida para conocer si el servidor esta activo"
+      responses: 
+        200: 
+          description: "Servidor Activo"
+          schema: 
+            properties: 
+              metadata:
+                $ref: '#/definitions/EntityMetadata'
+              server:
+                $ref: '#/definitions/ApplicationState'
+      summary: "Permite saber si el servidor esta activo"            
 definitions:
   Version:
     type: string
@@ -158,6 +176,7 @@ definitions:
       username: 
         description: Nombre del usuario en la aplicación
         type: string
-        
-      
-        
+  ApplicationState:
+    properties:
+      state:
+        type: string
